2007-05-12 Harri Pitkänen <hatapitk@iki.fi>

	* Return immediately from Hyphenator::hyphenate and
	  Hyphenator::createPossibleHyphens if initialization has
	  not been done.

2007-05-07 Harri Pitkänen <hatapitk@iki.fi>

	* Do not hyphenate at '
	* Increase version number to 2.0.1

2007-04-19 Harri Pitkänen <hatapitk@iki.fi>

	* Initial ChangeLog entry for version 2.0rc1