@@ -35,7 +35,7 @@ sal_Int16 SAL_CALL SpellAlternatives::getFailureType() throw (uno::RuntimeExcept
 }
 
 sal_Int16 SAL_CALL SpellAlternatives::getAlternativesCount() throw (uno::RuntimeException) {
-	return alternatives.getLength();
+	return (sal_Int16) alternatives.getLength(); // Integer overflow is not possible
 }
 
 uno::Sequence<OUString> SAL_CALL SpellAlternatives::getAlternatives() throw (uno::RuntimeException) {
