@@ -1,3 +1,9 @@
+2007-06-14 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Add support for building on Windows with Microsoft
+	  Visual C++ 2005 Express Edition
+	* Fix some warnings generated by MSVC
+
 2007-05-12 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Return immediately from Hyphenator::hyphenate and
